# serializer version: 1
# name: test_snapshots[cct][light.wled_cct_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Rotozoomer',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'max_color_temp_kelvin': 6535,
      'min_color_temp_kelvin': 2000,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_cct_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[cct][light.wled_cct_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp_kelvin': 2942,
      'effect': 'Solid',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Rotozoomer',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED CCT light',
      'hs_color': tuple(
        27.924,
        58.494,
      ),
      'max_color_temp_kelvin': 6535,
      'min_color_temp_kelvin': 2000,
      'rgb_color': tuple(
        255,
        175,
        106,
      ),
      'rgbw_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.501,
        0.384,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_cct_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'effect': 'Solid',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED RGB Light',
      'hs_color': tuple(
        218.906,
        50.196,
      ),
      'rgb_color': tuple(
        127,
        172,
        255,
      ),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_main-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light_main',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Main',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'main',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_main-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'WLED RGB Light Main',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light_main',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_segment_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light_segment_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Segment 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_segment_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'effect': 'Wipe',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED RGB Light Segment 1',
      'hs_color': tuple(
        40.0,
        100.0,
      ),
      'rgb_color': tuple(
        255,
        170,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.555,
        0.422,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light_segment_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb_single_segment][light.wled_rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][light.wled_rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'effect': 'Solid',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED RGB Light',
      'hs_color': tuple(
        218.906,
        50.196,
      ),
      'rgb_color': tuple(
        127,
        172,
        255,
      ),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb_websocket][light.wled_websocket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_websocket',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_websocket][light.wled_websocket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'effect': 'Solid',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED WebSocket',
      'hs_color': tuple(
        218.906,
        50.196,
      ),
      'rgb_color': tuple(
        127,
        172,
        255,
      ),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_websocket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgbw][light.wled_rgbw_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgbw_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgbw][light.wled_rgbw_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.RGBW: 'rgbw'>,
      'effect': 'Solid',
      'effect_list': list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'RSVD',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'RSVD',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'RSVD',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'RSVD',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'RSVD',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'RSVD',
        'RSVD',
        'RSVD',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      'friendly_name': 'WLED RGBW Light',
      'hs_color': tuple(
        0.0,
        64.706,
      ),
      'rgb_color': tuple(
        255,
        90,
        90,
      ),
      'rgbw_color': tuple(
        255,
        0,
        0,
        139,
      ),
      'supported_color_modes': list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      'supported_features': <LightEntityFeature: 36>,
      'xy_color': tuple(
        0.6,
        0.307,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgbw_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
